# ServiceMonitor

./: .env  .gitignore  Cargo.toml  Cargo_lock  README.md  runserver.sh  svcmon.toml
.cargo/: config.toml
config/: hosts.backup.json  hosts.json
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  App1.jsx  InputWithLabel.jsx  List.jsx  SearchForm.jsx
frontend/src/components/: Confirm.jsx  Header.jsx  helper.js
frontend/src/components/Host/: Host.jsx  Service.jsx
frontend/src/pages/: about.jsx  index.jsx  service.jsx
migrations/2024-05-06-222459_group_accts/: down.sql  up.sql
migrations/2024-05-06-222625_users/: up.sql
migrations/2024-05-06-222924_service_status/: down.sql  up.sql
src/: api.rs  collector.rs  config.rs  database.rs  hosts.rs  lib.rs  page_handler.rs  requests.rs  response.rs  schema.rs  service.rs  site.rs
src/api/: db_handler.rs  host_handler.rs  service_handler.rs
src/api/helpers/: request_types.rs
src/database/: crudops.rs  models.rs
src/site/: page_handler.rs
