[package]
name = "svcmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features =["serde"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.48"
toml = "0.4.2"
diesel = { version = "2.1.0", features = ["mysql", "chrono"] }
dotenvy = "0.15"
